2008-12-05  Matevz Tadel  <matevz.tadel@ijs.si>

	* lib-exec/project7.pl:
	Fix incomplete code template from previous commit.

2008-12-02  Matevz Tadel  <matevz.tadel@ijs.si>

	* lib-exec/project7.pl:
	Modify handling of "char*" arguments so that value 0 is passed
	across correctly - with the previous change here it was passed as
	an empty string "".

2008-11-11  Matevz Tadel  <matevz.tadel@ijs.si>

	* configure:
	Add '--no-print-directory' to invocations of make that query for
	libset details (deps, id). This was causing trouble when calling
	configure from a higher level make in gled-builder.

2008-09-29  Matevz Tadel  <matevz.tadel@ijs.si>

	* configure:
	When searching for libsets to build, look for simbolic links
	instead of directories.
	One should use the new check-out method now - as provided by the
	latest version of the 'gled-build-checkout' script.

2008-09-25  Matevz Tadel  <matevz.tadel@ijs.si>

	* configure:
	Move dumping of config.status file to the beginning of configure.
	The config hash-ref is reloaded during operation and so
	the config.status was overwriten even in case of --reconf.

	* lib-exec/project7.pl:
	When generating code for unstreaming of char* or Text_t* function
	arguments use std::vector<type> instead of auto_ptr<type>.
	This caused mismatched new[] / delete (thanks valgrind).

2008-09-25  Matevz Tadel  <matevz.tadel@ijs.si>

	* cfg/Glass_SKEL.cxx:
	* cfg/Glass_SKEL.h:
	* cfg/Stone_SKEL.cxx:
	* cfg/Stone_SKEL.h:
	Add virtual destructor.
	Move default constructor implementation into the .cxx file.

2008-09-23  Matevz Tadel  <matevz.tadel@ijs.si>

	* lib-exec/gled_glue_gen.pl:
	* lib-exec/project7.pl:
	Follow changes in ZMIR member naming.

	* lib-exec/mk_bless_dep.pl:
	Generate explicit dependency  xx.o: xx.h7 xx.c7

2008-07-27  Matevz Tadel  <matevz.tadel@ijs.si>

	* cfg/Glass_SKEL.cxx:
	* cfg/Glass_SKEL.h:
	* cfg/Stone_SKEL.cxx:
	* cfg/Stone_SKEL.h:
	Whitespace, semicolons after root/cint defines.
