@@ -1,0 +1,14 @@
+# Top-level makefile for bulding and installing several libsets.
+
+include Makefile.config
+
+clean::
+	rm -f $(addsuffix /.depend_done, ${SUBDIRS})
+clean::
+
+distclean::
+	rm -f $(addsuffix /.depend_done, ${SUBDIRS})
+distclean::
+distclean::
+	rm -f ${BUILD_FILES}
+	rm -rf htmldoc/ classdoc/ macros/*.so
